# RAG-project

./: .gitignore  GEMINI_API_SETUP.md  README.md  chatgpt_chunker.py  check_gemini_region.py  config.py  create_test_pdf.py  data_processor.py  diagnose_gemini_403.py  env_example.txt  full_pipeline_test.py  gemini_integration.py  generate_demo.py  main.py  pyproject.toml  quick_gemini_test.py  quick_test.py  reindex_with_improved_labeling.py  requirements-gpu.txt  requirements.txt  setup.py  simple_vector_db.py  test_chatgpt_chunking.py  test_data_processor.py  test_gemini_api.py  vector_database.py
scripts/: async_reindex.py  full_pipeline_test.py  multiprocess_reindex.py  reindex_with_improved_labeling.py
src/: __init__.py
src/databases/: __init__.py  simple_vector_db.py  vector_database.py
src/integrations/: __init__.py  gemini_integration.py
src/processors/: __init__.py  advanced_structuring.py  chatgpt_chunker.py  data_processor.py  gemini_chunker.py
src/rag_system/: __init__.py  legal_document_generator.py  strategic_retrieval.py
src/utils/: __init__.py  config.py
static/: styles.css
templates/: index.html
tests/: compare_chunking_models.py  diagnose_search_issues.py  test_async_processing.py  test_chatgpt_chunking.py  test_chunking_cache.py  test_vector_db.py
